# Shanti_2025

./: .gitignore  .gitmodules  README.md  bash_aliases  notes
GUI/: README.md
functional_approach/: package.xml  setup.cfg  setup.py
gps_srv/: package.xml  setup.cfg  setup.py
gps_waypoint_follower/: package.xml  setup.cfg  setup.py
navigation/: README.md  package.xml  setup.cfg  setup.py
navigation/config/: dual_ekf_navsat_params.yaml
navigation/launch/: dual_ekf_navsat.launch.py  dual_ekf_navsat_launch.py
navigation/nav_bringup/: package.xml  setup.cfg  setup.py
navigation/nav_bringup/launch/: nav_bringup.launch.py
navigation/nav_bringup/nav_bringup/: goal_listener.py  lane_segmentation_to_pointcloud.py  waypoint_joystick_record.py  waypoint_publisher.py  xwaypoint_publisher.py
navigation/nav_bringup/params/: controller_server.yaml  gps_waypoints.yaml  gps_waypoints_competition.yaml  gps_waypoints_over_bridge.yaml  gps_waypoints_session_20250424_150257.yaml  gps_waypoints_session_20250424_160531.yaml  gps_waypoints_session_20250507_175653.yaml  gps_waypoints_session_20250507_183103.yaml  gps_waypoints_session_20250508_112458.yaml  gps_waypoints_session_20250508_124010.yaml  nav2_params.yaml  planner_server.yaml  waypoint_follower.yaml
navigation/navigation/: navigation_node.py
simulation/: README.md  package.xml  setup.py
simulation/launch/: equirect_stitcher.launch.py
simulation/simulation/: equirect_stitcher.py  simulation_node.py
simulation/worlds/: compeition.world  competition.world  competition_no_barrels.world  competition_oakland.world  competition_oakland_refined.world  fullTrack.world  map1.world  map10.world  map1ramp.world  map6.world  map9.world  model.config  oakland.txt  potholes-flags  potholes.world  test.world  track.world
simulation/worlds/models/: readme.txt
simulation/worlds/models/ground_plane/: model.sdf
simulation/worlds/models/igvc_track/: model.config  model.sdf
simulation/worlds/models/igvc_track/materials/scripts/: track.material
simulation/worlds/models/igvc_track1/: model.config  model.sdf
simulation/worlds/models/igvc_track10/: model.config  model.sdf
simulation/worlds/models/igvc_track11/: model.config  model.sdf
simulation/worlds/models/igvc_track2/: model.config  model.sdf
simulation/worlds/models/igvc_track3/: model.config  model.sdf
simulation/worlds/models/igvc_track4/: model.config  model.sdf
simulation/worlds/models/igvc_track5/: model.config  model.sdf
simulation/worlds/models/igvc_track6/: model.config  model.sdf
simulation/worlds/models/igvc_track6/materials/scripts/: track.material
simulation/worlds/models/igvc_track7/: model.config  model.sdf
simulation/worlds/models/igvc_track8/: model.config  model.sdf
simulation/worlds/models/igvc_track9/: model.config  model.sdf
simulation/worlds/models/ramp/: model.sdf
simulation/worlds/models/waypoint_flag/: model.config  model.sdf
src/shanti_base/: CMakeLists.txt  package.xml
src/shanti_base/launch/: display.launch.py
src/shanti_base/src/description/: shanti_description.urdf
(+146 files in other folders)
